added score and death animation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="playerRun" id="player"></div>
         <div id="enemy"></div>
     </div>
+    <div id="score"></div>
 </body>
 <script src="script.js"></script>
 </html>
