--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr" onclick="jump()">
+
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Jump King</title>
 </head>
+
 <body>
     <div id="game">
+        <div id="gameOver">GAME OVER</div>
         <div class="playerRun" id="player"></div>
         <div id="enemy"></div>
     </div>
     <div id="score"></div>
 </body>
 <script src="script.js"></script>
+
 </html>
