added random enemies

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="game">
         <div id="gameOver">GAME OVER</div>
         <div class="playerRun" id="player"></div>
-        <div id="enemy"></div>
+        <div id="enemy" class=""></div>
     </div>
     <div id="score"></div>
 </body>
