added character selection screen, and a button to start the game

--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
 <body>
     <div id="game">
         <div id="gameOver">GAME OVER</div>
-        <div class="playerRun" id="player"></div>
+        <div class="" id="player"></div>
         <div id="enemy" class=""></div>
     </div>
+    <div id="choosePlayer">Choisissez votre joueur
+        <div id="playerContainer">
+            <div id="player1" class="player1Idle"></div>
+            <div id="player2" class="player2Idle"></div>
+            <div id="player3" class="player3Idle"></div>
+        </div>
+    </div>
+
+    <button id="startGame">Commencer !</button>
     <div id="score"></div>
 </body>
 <script src="script.js"></script>
